<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagen_de_fondo"
        android:scaleType="fitXY"
        android:src="@mipmap/campo" />

    <TextView
        android:id="@+id/titulo"
        style="@style/etiquetas"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/mis_tareas"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/etiquetas"
        android:layout_below="@+id/titulo"
        android:layout_marginTop="10dp"
        android:text="@string/itt"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitulo"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/cajasTexto"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaUser"
                style="@style/cajasTexto2"
                android:hint="@string/usuario">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/cajasTexto"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaPass"
                style="@style/cajasTexto2"
                android:hint="@string/pass"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/boton"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:onClick="login"/>

    <TextView
        android:id="@+id/cuentaNueva"
        style="@style/etiquetas"
        android:layout_below="@+id/botonLogin"
        android:layout_marginTop="19dp"
        android:text="@string/crea_una_cuenta"
        android:textSize="20sp"
        android:onClick="cuenta"/>


</RelativeLayout>